Début du code HTML + favicon

--- a/index.html
+++ b/index.html
@@ -1,7 +1,29 @@
 <html>
-    <div>
-        <img src="assets/logo/logo_without_text.png">
-        <img src="assets/icons/header_icons/icon_search.png">
-        <img src="assets/icons/header_icons/icon_menu_hamburger.png">
-    </div>
+    <head>
+        <link rel="stylesheet" href="src/css/style.css">
+        <title>Festiv'Halloween</title>
+        <link rel="icon" href="assets/favicons/favicon.ico" type="image/x-icon">
+        <div class="header__mobile">
+            <img class="header__icon" src="assets/logo/logo_without_text.png">
+            <img class="header__icon" src="assets/icons/header_icons/icon_search.png">
+            <img class="header__icon" src="assets/icons/header_icons/icon_menu_hamburger.png">
+        </div>
+        <div class="header">
+            <p>Festiv'Halloween</p>
+            <img src="assets/header/scream_killer.png">
+            <h1 class="header_title">Notre festival</h1>
+        </div>
+    </head>
+    <body>
+        <h2>
+            Festiv'Halloween : Une Nuit d'Épouvante à Montbéliard
+        </h2>
+        <p>
+            Amateurs de <span class="body__bold">frissons</span>, préparez-vous à vivre une expérience cinématographique inoubliable ! <span class="body__bold">Festiv'Halloween</span> vous plonge dans l'univers terrifiant du cinéma d'<span class="body__bold">horreur</span>, pour une nuit entière dédiée aux sensations fortes. Organisé à <span class="body__bold">Montbéliard</span>, notre festival coïncide parfaitement avec la période d'<span class="body__bold">Halloween</span>, créant une atmosphère idéale pour célébrer le plaisir de la peur.
+        </p>
+        <p>
+            Nous savons que beaucoup d'entre vous aiment se faire <span class="body__bold">peur</span>, suspendus à leur siège, ressentant la tension croissante d'un bon film d'<span class="body__bold">épouvante</span>. C'est pour cela que Festiv'Halloween a vu le jour : offrir aux amateurs de <span class="body__bold">frissons</span> un festival entièrement dédié à l'horreur et à l'épouvante. En <span class="body__bold">Franche-Comté</span>, les festivals de cinéma se font rares, et encore plus ceux consacrés aux films d'<span class="body__bold">horreur</span>. C'est donc une opportunité unique pour les passionnés du genre de se rassembler, que vous soyez amateurs, curieux, ou professionnels.
+        </p>
+        <img src="assets/others_images/girl_in_scary_room.png">
+    </body>
 </html>
