Page d'accueil HTML terminé

--- a/index.html
+++ b/index.html
@@ -9,21 +9,99 @@
             <img class="header__icon" src="assets/icons/header_icons/icon_menu_hamburger.png">
         </div>
         <div class="header">
-            <p>Festiv'Halloween</p>
-            <img src="assets/header/scream_killer.png">
-            <h1 class="header_title">Notre festival</h1>
+            <p class="festivhalloween__title">Festiv'Halloween</p>
+            <img class="header__img" src="assets/header/scream_killer.png">
+            <h1 class="header__title">Notre festival</h1>
         </div>
     </head>
-    <body>
-        <h2>
+    <body class="body">
+        <h2 class="body__title">
             Festiv'Halloween : Une Nuit d'Épouvante à Montbéliard
         </h2>
-        <p>
+        <p class="body__text">
             Amateurs de <span class="body__bold">frissons</span>, préparez-vous à vivre une expérience cinématographique inoubliable ! <span class="body__bold">Festiv'Halloween</span> vous plonge dans l'univers terrifiant du cinéma d'<span class="body__bold">horreur</span>, pour une nuit entière dédiée aux sensations fortes. Organisé à <span class="body__bold">Montbéliard</span>, notre festival coïncide parfaitement avec la période d'<span class="body__bold">Halloween</span>, créant une atmosphère idéale pour célébrer le plaisir de la peur.
         </p>
-        <p>
+        <p class="body__text">
             Nous savons que beaucoup d'entre vous aiment se faire <span class="body__bold">peur</span>, suspendus à leur siège, ressentant la tension croissante d'un bon film d'<span class="body__bold">épouvante</span>. C'est pour cela que Festiv'Halloween a vu le jour : offrir aux amateurs de <span class="body__bold">frissons</span> un festival entièrement dédié à l'horreur et à l'épouvante. En <span class="body__bold">Franche-Comté</span>, les festivals de cinéma se font rares, et encore plus ceux consacrés aux films d'<span class="body__bold">horreur</span>. C'est donc une opportunité unique pour les passionnés du genre de se rassembler, que vous soyez amateurs, curieux, ou professionnels.
         </p>
-        <img src="assets/others_images/girl_in_scary_room.png">
+        <img class="other__img" src="assets/others_images/girl_in_scary_room.png">
+        <p class="body__text">
+            Pendant toute une nuit, le festival proposera un large éventail de films d'horreur : <span class="body__bold">thrillers</span> psychologiques, slashers, films <span class="body__bold">gores</span>, et bien plus encore, pour satisfaire tous les goûts. Nos principaux publics ? Les jeunes, qui adorent les sorties entre amis et se retrouver pour se faire peur. Mais aussi les amateurs de cinéma d'<span class="body__bold">horreur</span>, qui dévorent les classiques et attendent avec impatience de découvrir de nouvelles pépites. Et bien sûr, nous accueillons également les professionnels ou ceux qui souhaitent s'inspirer et enrichir leur culture du <span class="body__bold">cinéma d'épouvante.</span>
+        </p>
+        <p class="body__little_title">
+            Rejoignez-nous pour une nuit où le suspense, la peur et l'horreur seront au rendez-vous. Festiv'Halloween, c'est l'occasion de vibrer et de sursauter.  Vous n'êtes pas prêts de l'oublier !
+        </p>
+        <div class="card">
+            <img src="assets/cards/seated_pumpkin.png">
+            <div class="card__block">
+                <p class="card__title">Du 29 au 31 Octobre</p>
+                <p class="card__text">Le premier Festiv'Haloween se déroulera à Montbéliard.</p>
+                <p class="card__link">Plus d'infos</p>
+            </div>
+        </div>
+        <div class="card">
+            <img src="assets/cards/it_poster.png">
+            <div class="card__block">
+                <p class="card__title">Programmation</p>
+                <p class="card__text">Découvre les films qui seront diffusés lors du festival.</p>
+                <p class="card__link">Plus d'infos</p>
+            </div>
+        </div>
+        <div class="card">
+            <img src="assets/cards/scary_room.png">
+            <div class="card__block">
+                <p class="card__title">Billetterie en ligne</p>
+                <p class="card__text">Découvrez la billetterie en ligne pour obtenir des places.</p>
+                <p class="card__link">Plus d'infos</p>
+            </div>
+        </div>
+        <div class="card">
+            <img src="assets/cards/art_the_clown.png">
+            <div class="card__block">
+                <p class="card__title">Filmographie</p>
+                <p class="card__text">Découvrez les films en tête d'affiche du festival.</p>
+                <p class="card__link">Plus d'infos</p>
+            </div>
+        </div>
+        <div class="card">
+            <img src="assets/cards/winnie_the_pooh.png">
+            <div class="card__block">
+                <p class="card__title">À propos</p>
+                <p class="card__text">Apprenez en plus sur ce profil</p>
+                <p class="card__link">Plus d'infos</p>
+            </div>
+        </div>
     </body>
+    <footer class="footer">
+        <img class="footer__logo" src="assets/icons/footer_icons/big_logo_without_text.png">
+        <span class="festivhalloween__title">Festiv'Halloween</span>
+        <p>
+            Menu :
+        </p>
+        <p>
+            Accueil <br>
+            Contacts <br>
+            Programmation <br>
+            Billetterie <br>
+            Filmographie <br>
+            à propos
+        </p>
+        <p>
+            Contact :
+        </p>
+        <p>
+            03 81 94 53 89 <br>
+            8 Rue Henri Mouhot <br>
+            25200 Montbéliard
+        </p>
+        <p>
+            Nous suivre :
+        </p>
+        <div>
+            <img src="assets/icons/footer_icons/icon_instagram.png">
+            <img src="assets/icons/footer_icons/icon_tiktok.png">
+            <img src="assets/icons/footer_icons/icon_facebook.png">
+        </div>
+        <img src="assets/logo/logo_mmi.png">
+    </footer>
 </html>
