--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
         <title>Festiv'Halloween</title>
         <link rel="icon" href="assets/favicons/favicon.ico" type="image/x-icon">
         <div class="header__mobile">
-            <img class="header__icon" src="assets/logo/logo_without_text.png">
-            <img class="header__icon" src="assets/icons/header_icons/icon_search.png">
-            <img class="header__icon" src="assets/icons/header_icons/icon_menu_hamburger.png">
+            <img class="header__logo" src="assets/logo/logo_without_text.png">
+            <img class="header__icon__search" src="assets/icons/header_icons/icon_search.png">
+            <img class="header__icon__menu" src="assets/icons/header_icons/icon_menu_hamburger.png">
         </div>
         <div class="header">
             <p class="festivhalloween__title">Festiv'Halloween</p>
