--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
         <link rel="stylesheet" href="src/css/style.css">
         <title>Festiv'Halloween</title>
         <link rel="icon" href="assets/favicons/favicon.ico" type="image/x-icon">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Nosifer&display=swap" rel="stylesheet">
         <div class="header__mobile">
             <img class="header__logo" src="assets/logo/logo_without_text.png">
             <img class="header__icon__search" src="assets/icons/header_icons/icon_search.png">
