--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Nosifer&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Hammersmith+One&family=Nosifer&display=swap" rel="stylesheet">
         <div class="header__mobile">
             <img class="header__logo" src="assets/logo/logo_without_text.png">
             <img class="header__icon__search" src="assets/icons/header_icons/icon_search.png">
