--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<html class="html__class">
     <head>
         <link rel="stylesheet" href="src/css/style.css">
         <title>Festiv'Halloween</title>
@@ -9,6 +9,9 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Hammersmith+One&family=Nosifer&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Hammersmith+One&family=Nosifer&display=swap" rel="stylesheet">
         <div class="header__mobile">
             <img class="header__logo" src="assets/logo/logo_without_text.png">
             <img class="header__icon__search" src="assets/icons/header_icons/icon_search.png">
@@ -20,9 +23,9 @@
             <h1 class="header__title">Notre festival</h1>
         </div>
     </head>
-    <body class="body">
+    <body class="body__class">
         <h2 class="body__title">
-            Festiv'Halloween : Une Nuit d'Épouvante à Montbéliard
+            Une Nuit d'Épouvante à Montbéliard
         </h2>
         <p class="body__text">
             Amateurs de <span class="body__bold">frissons</span>, préparez-vous à vivre une expérience cinématographique inoubliable ! <span class="body__bold">Festiv'Halloween</span> vous plonge dans l'univers terrifiant du cinéma d'<span class="body__bold">horreur</span>, pour une nuit entière dédiée aux sensations fortes. Organisé à <span class="body__bold">Montbéliard</span>, notre festival coïncide parfaitement avec la période d'<span class="body__bold">Halloween</span>, créant une atmosphère idéale pour célébrer le plaisir de la peur.
@@ -30,11 +33,11 @@
         <p class="body__text">
             Nous savons que beaucoup d'entre vous aiment se faire <span class="body__bold">peur</span>, suspendus à leur siège, ressentant la tension croissante d'un bon film d'<span class="body__bold">épouvante</span>. C'est pour cela que Festiv'Halloween a vu le jour : offrir aux amateurs de <span class="body__bold">frissons</span> un festival entièrement dédié à l'horreur et à l'épouvante. En <span class="body__bold">Franche-Comté</span>, les festivals de cinéma se font rares, et encore plus ceux consacrés aux films d'<span class="body__bold">horreur</span>. C'est donc une opportunité unique pour les passionnés du genre de se rassembler, que vous soyez amateurs, curieux, ou professionnels.
         </p>
-        <img class="other__img" src="assets/others_images/girl_in_scary_room.png">
+        <img class="body__img" src="assets/others_images/girl_in_scary_room.png">
         <p class="body__text">
             Pendant toute une nuit, le festival proposera un large éventail de films d'horreur : <span class="body__bold">thrillers</span> psychologiques, slashers, films <span class="body__bold">gores</span>, et bien plus encore, pour satisfaire tous les goûts. Nos principaux publics ? Les jeunes, qui adorent les sorties entre amis et se retrouver pour se faire peur. Mais aussi les amateurs de cinéma d'<span class="body__bold">horreur</span>, qui dévorent les classiques et attendent avec impatience de découvrir de nouvelles pépites. Et bien sûr, nous accueillons également les professionnels ou ceux qui souhaitent s'inspirer et enrichir leur culture du <span class="body__bold">cinéma d'épouvante.</span>
         </p>
-        <p class="body__little_title">
+        <p class="body__little__title">
             Rejoignez-nous pour une nuit où le suspense, la peur et l'horreur seront au rendez-vous. Festiv'Halloween, c'est l'occasion de vibrer et de sursauter.  Vous n'êtes pas prêts de l'oublier !
         </p>
         <div class="card">
