CSS Card + Normalize

--- a/index.html
+++ b/index.html
@@ -40,44 +40,44 @@
         <p class="body__little__title">
             Rejoignez-nous pour une nuit où le suspense, la peur et l'horreur seront au rendez-vous. Festiv'Halloween, c'est l'occasion de vibrer et de sursauter.  Vous n'êtes pas prêts de l'oublier !
         </p>
-        <div class="card">
-            <img src="assets/cards/seated_pumpkin.png">
+        <div class="card__class">
+            <img class="card__img" src="assets/cards/seated_pumpkin.png">
             <div class="card__block">
                 <p class="card__title">Du 29 au 31 Octobre</p>
                 <p class="card__text">Le premier Festiv'Haloween se déroulera à Montbéliard.</p>
-                <p class="card__link">Plus d'infos</p>
+                <a class="card__link">Plus d'infos</a>
             </div>
         </div>
-        <div class="card">
-            <img src="assets/cards/it_poster.png">
+        <div class="card__class">
+            <img class="card__img" src="assets/cards/it_poster.png">
             <div class="card__block">
                 <p class="card__title">Programmation</p>
                 <p class="card__text">Découvre les films qui seront diffusés lors du festival.</p>
-                <p class="card__link">Plus d'infos</p>
+                <a class="card__link">Plus d'infos</a>
             </div>
         </div>
-        <div class="card">
-            <img src="assets/cards/scary_room.png">
+        <div class="card__class">
+            <img class="card__img" src="assets/cards/scary_room.png">
             <div class="card__block">
                 <p class="card__title">Billetterie en ligne</p>
                 <p class="card__text">Découvrez la billetterie en ligne pour obtenir des places.</p>
-                <p class="card__link">Plus d'infos</p>
+                <a class="card__link">Plus d'infos</a>
             </div>
         </div>
-        <div class="card">
-            <img src="assets/cards/art_the_clown.png">
+        <div class="card__class">
+            <img class="card__img" src="assets/cards/art_the_clown.png">
             <div class="card__block">
                 <p class="card__title">Filmographie</p>
                 <p class="card__text">Découvrez les films en tête d'affiche du festival.</p>
-                <p class="card__link">Plus d'infos</p>
+                <a class="card__link">Plus d'infos</a>
             </div>
         </div>
-        <div class="card">
-            <img src="assets/cards/winnie_the_pooh.png">
+        <div class="card__class">
+            <img class="card__img" src="assets/cards/winnie_the_pooh.png">
             <div class="card__block">
                 <p class="card__title">À propos</p>
                 <p class="card__text">Apprenez en plus sur ce profil</p>
-                <p class="card__link">Plus d'infos</p>
+                <a class="card__link">Plus d'infos</a>
             </div>
         </div>
     </body>
