--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <img class="header__icon__menu" src="assets/icons/header_icons/icon_menu_hamburger.png">
         </div>
         <div class="header">
-            <p class="festivhalloween__title">Festiv'Halloween</p>
+            <p class="header__festivhalloween__title">Festiv'Halloween</p>
             <img class="header__img" src="assets/header/scream_killer.png">
             <h1 class="header__title">Notre festival</h1>
         </div>
@@ -81,36 +81,44 @@
             </div>
         </div>
     </body>
-    <footer class="footer">
-        <img class="footer__logo" src="assets/icons/footer_icons/big_logo_without_text.png">
-        <span class="festivhalloween__title">Festiv'Halloween</span>
-        <p>
-            Menu :
-        </p>
-        <p>
-            Accueil <br>
-            Contacts <br>
-            Programmation <br>
-            Billetterie <br>
-            Filmographie <br>
-            à propos
-        </p>
-        <p>
-            Contact :
-        </p>
-        <p>
-            03 81 94 53 89 <br>
-            8 Rue Henri Mouhot <br>
-            25200 Montbéliard
-        </p>
-        <p>
-            Nous suivre :
-        </p>
-        <div>
-            <img src="assets/icons/footer_icons/icon_instagram.png">
-            <img src="assets/icons/footer_icons/icon_tiktok.png">
-            <img src="assets/icons/footer_icons/icon_facebook.png">
+    <footer class="footer__class">
+        <div class="footer__content">
+            <img class="footer__logo" src="assets/icons/footer_icons/big_logo_without_text.png">
+            <span class="footer__festivhalloween__title">Festiv'Halloween</span>
+            <div class="footer__section">
+                <p class="footer__semi__title">
+                    Menu :
+                </p>
+                <p class="footer__list">
+                    Accueil <br>
+                    Contacts <br>
+                    Programmation <br>
+                    Billetterie <br>
+                    Filmographie <br>
+                    à propos
+                </p>
+            </div>
+            <div class="footer__section">
+                <p class="footer__semi__title">
+                    Contact :
+                </p>
+                <p class="footer__list">
+                    03 81 94 53 89 <br>
+                    8 Rue Henri Mouhot <br>
+                    25200 Montbéliard
+                </p>
+            </div>
+            <div class="footer__section">
+                <p class="footer__semi__title">
+                    Nous suivre :
+                </p>
+                <div class="footer__icon__section">
+                    <img class="footer__icon" src="assets/icons/footer_icons/icon_instagram.png">
+                    <img class="footer__icon" src="assets/icons/footer_icons/icon_tiktok.png">
+                    <img class="footer__icon" src="assets/icons/footer_icons/icon_facebook.png">
+                </div>
+            </div>
+            <img class="footer__mmi__logo" src="assets/logo/logo_mmi.png">
         </div>
-        <img src="assets/logo/logo_mmi.png">
     </footer>
 </html>
