--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
+<!DOCTYPE html>
 <html class="html__class">
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="src/css/style.css">
         <title>Festiv'Halloween</title>
         <link rel="icon" href="assets/favicons/favicon.ico" type="image/x-icon">
@@ -12,6 +15,8 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Hammersmith+One&family=Nosifer&display=swap" rel="stylesheet">
+    </head>
+    <body class="body__class">
         <div class="header__mobile">
             <img class="header__logo" src="assets/logo/logo_without_text.png">
             <img class="header__icon__search" src="assets/icons/header_icons/icon_search.png">
@@ -22,8 +27,6 @@
             <img class="header__img" src="assets/header/scream_killer.png">
             <h1 class="header__title">Notre festival</h1>
         </div>
-    </head>
-    <body class="body__class">
         <h2 class="body__title">
             Une Nuit d'Épouvante à Montbéliard
         </h2>
@@ -53,7 +56,7 @@
             <div class="card__block">
                 <p class="card__title">Programmation</p>
                 <p class="card__text">Découvre les films qui seront diffusés lors du festival.</p>
-                <a class="card__link">Plus d'infos</a>
+                <a class="card__link" href="programmation.html">Plus d'infos</a>
             </div>
         </div>
         <div class="card__class">
@@ -76,7 +79,7 @@
             <img class="card__img" src="assets/cards/winnie_the_pooh.png">
             <div class="card__block">
                 <p class="card__title">À propos</p>
-                <p class="card__text">Apprenez en plus sur ce profil</p>
+                <p class="card__text">Apprenez en plus sur ce festival de films d'horreurs</p>
                 <a class="card__link">Plus d'infos</a>
             </div>
         </div>
