MAJ programmation.html

--- a/programmation.html
+++ b/programmation.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html class="html__class">
+<html class="html__class" lang="fr">
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">    
         <link rel="stylesheet" href="src/css/style.css">
         <title>Programmation</title>
         <link rel="icon" href="assets/favicons/favicon.ico" type="image/x-icon">
@@ -13,6 +15,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Hammersmith+One&family=Nosifer&display=swap" rel="stylesheet">
+        <script src="src/js/carousel.js"></script>
         <div class="header__mobile">
             <img class="header__logo" src="assets/logo/logo_without_text.png">
             <img class="header__icon__search" src="assets/icons/header_icons/icon_search.png">
@@ -48,35 +51,51 @@
             11h - 13h30
         </p>
         <div class="body__carousel">
-            <img src="assets/planning_images/day_1/crenel_1/it_follows_poster.png" alt="Image 1">
-            <img src="assets/planning_images/day_1/crenel_1/shaun_of_the_dead_poster.png" alt="Image 2">
-            <img src="assets/planning_images/day_1/crenel_1/the_brids_poster.png" alt="Image 3">
-            <img src="assets/planning_images/day_1/crenel_1/the_house_of_1000_dead_poster.png" alt="Image 4">
+            <div class="carousel">
+                <img class="carousel__img" src="assets/planning_images/day_1/crenel_1/it_follows_poster.png" alt="Image 1">
+                <img class="carousel__img" src="assets/planning_images/day_1/crenel_1/shaun_of_the_dead_poster.png" alt="Image 2">
+                <img class="carousel__img" src="assets/planning_images/day_1/crenel_1/the_brids_poster.png" alt="Image 3">
+                <img class="carousel__img" src="assets/planning_images/day_1/crenel_1/the_house_of_1000_dead_poster.png" alt="Image 4">
+            </div>
+            <button class="button__prev">❮</button>
+            <button class="button__next">❯</button>
         </div>
         <p class="body__semi__title">
             15h - 17h30
         </p>
         <div class="body__carousel">
-            <img src="assets/planning_images/day_1/crenel_2/halloween_poster.png" alt="Image 1">
-            <img src="assets/planning_images/day_1/crenel_2/megan_poster.png" alt="Image 2">
-            <img src="assets/planning_images/day_1/crenel_2/the_descent_poster.png" alt="Image 3">
-            <img src="assets/planning_images/day_1/crenel_2/the_exorcist_poster.png" alt="Image 4">
+            <div class="carousel">
+                <img class="carousel__img" src="assets/planning_images/day_1/crenel_2/halloween_poster.png" alt="Image 1">
+                <img class="carousel__img" src="assets/planning_images/day_1/crenel_2/megan_poster.png" alt="Image 2">
+                <img class="carousel__img" src="assets/planning_images/day_1/crenel_2/the_descent_poster.png" alt="Image 3">
+                <img class="carousel__img" src="assets/planning_images/day_1/crenel_2/the_exorcist_poster.png" alt="Image 4">
+            </div>
+            <button class="button__prev">❮</button>
+            <button class="button__next">❯</button>
         </div>
         <p class="body__semi__title">
             19h - 21h30
         </p>
         <div class="body__carousel">
-            <img src="assets/planning_images/day_1/crenel_3/herredite_poster.png" alt="Image 1">
-            <img src="assets/planning_images/day_1/crenel_3/it_poster.png" alt="Image 2">
-            <img src="assets/planning_images/day_1/crenel_3/the_witch_poster.png" alt="Image 3">
+            <div class="carousel">
+                <img class="carousel__img" src="assets/planning_images/day_1/crenel_3/herredite_poster.png" alt="Image 1">
+                <img class="carousel__img" src="assets/planning_images/day_1/crenel_3/it_poster.png" alt="Image 2">
+                <img class="carousel__img" src="assets/planning_images/day_1/crenel_3/the_witch_poster.png" alt="Image 3">
+            </div>
+            <button class="button__prev">❮</button>
+            <button class="button__next">❯</button>
         </div>
         <p class="body__semi__title">
             22h - 00h30
         </p>
         <div class="body__carousel">
-            <img src="assets/planning_images/day_1/crenel_4/friday_thirteen_poster.png" alt="Image 1">
-            <img src="assets/planning_images/day_1/crenel_4/the_conjuring_poster.png" alt="Image 2">
-            <img src="assets/planning_images/day_1/crenel_4/the_hill_has_eyes_poster.png" alt="Image 3">
+            <div class="carousel">
+                <img class="carousel__img" src="assets/planning_images/day_1/crenel_4/friday_thirteen_poster.png" alt="Image 1">
+                <img class="carousel__img" src="assets/planning_images/day_1/crenel_4/the_conjuring_poster.png" alt="Image 2">
+                <img class="carousel__img" src="assets/planning_images/day_1/crenel_4/the_hill_has_eyes_poster.png" alt="Image 3">
+            </div>
+            <button class="button__prev">❮</button>
+            <button class="button__next">❯</button>
         </div>
         <p class="body__title">
             Jour 2
@@ -85,35 +104,51 @@
             11h - 13h30
         </p>
         <div class="body__carousel">
-            <img src="assets/planning_images/day_2/crenel_1/midsommar_poster.png" alt="Image 1">
-            <img src="assets/planning_images/day_2/crenel_1/nightmare_on_elm_street_poster.png" alt="Image 2">
-            <img src="assets/planning_images/day_2/crenel_1/texas_chainsaw_massacre_poster.png" alt="Image 3">
-            <img src="assets/planning_images/day_2/crenel_1/the_shining_poster.png" alt="Image 4">
+            <div class="carousel">
+                <img class="carousel__img" src="assets/planning_images/day_2/crenel_1/midsommar_poster.png" alt="Image 1">
+                <img class="carousel__img" src="assets/planning_images/day_2/crenel_1/nightmare_on_elm_street_poster.png" alt="Image 2">
+                <img class="carousel__img" src="assets/planning_images/day_2/crenel_1/texas_chainsaw_massacre_poster.png" alt="Image 3">
+                <img class="carousel__img" src="assets/planning_images/day_2/crenel_1/the_shining_poster.png" alt="Image 4">
+            </div>
+            <button class="button__prev">❮</button>
+            <button class="button__next">❯</button>
         </div>
         <p class="body__semi__title">
             15h - 17h30
         </p>
         <div class="body__carousel">
-            <img src="assets/planning_images/day_2/crenel_2/annabelle_poster.png" alt="Image 1">
-            <img src="assets/planning_images/day_2/crenel_2/hostel_poster.png" alt="Image 2">
-            <img src="assets/planning_images/day_2/crenel_2/the_ring_poster.png" alt="Image 3">
-            <img src="assets/planning_images/day_2/crenel_2/winnie_the_pooh_poster.png alt="Image 4">
+            <div class="carousel">
+                <img class="carousel__img" src="assets/planning_images/day_2/crenel_2/annabelle_poster.png" alt="Image 1">
+                <img class="carousel__img" src="assets/planning_images/day_2/crenel_2/hostel_poster.png" alt="Image 2">
+                <img class="carousel__img" src="assets/planning_images/day_2/crenel_2/the_ring_poster.png" alt="Image 3">
+                <img class="carousel__img" src="assets/planning_images/day_2/crenel_2/winnie_the_pooh_poster.png" alt="Image 4">
+            </div>
+            <button class="button__prev">❮</button>
+            <button class="button__next">❯</button>
         </div>
         <p class="body__semi__title">
             19h - 21h30
         </p>
         <div class="body__carousel">
-            <img src="assets/planning_images/day_2/crenel_3/jaws_poster.png" alt="Image 1">
-            <img src="assets/planning_images/day_2/crenel_3/rec_four_apocalypse_poster.png" alt="Image 2">
-            <img src="assets/planning_images/day_2/crenel_3/the_invisible_man.png" alt="Image 3">
+            <div class="carousel">
+                <img class="carousel__img" src="assets/planning_images/day_2/crenel_3/jaws_poster.png" alt="Image 1">
+                <img class="carousel__img" src="assets/planning_images/day_2/crenel_3/rec_four_apocalypse_poster.png" alt="Image 2">
+                <img class="carousel__img" src="assets/planning_images/day_2/crenel_3/the_invisible_man.png" alt="Image 3">
+            </div>
+            <button class="button__prev">❮</button>
+            <button class="button__next">❯</button>
         </div>
         <p class="body__semi__title">
             22h - 00h30
         </p>
         <div class="body__carousel">
-            <img src="assets/planning_images/day_2/crenel_4/hellraiser_poster.png" alt="Image 1">
-            <img src="assets/planning_images/day_2/crenel_4/insidous_poster.png" alt="Image 2">
-            <img src="assets/planning_images/day_2/crenel_4/scream_poster.png" alt="Image 3">
+            <div class="carousel">
+                <img class="carousel__img" src="assets/planning_images/day_2/crenel_4/hellraiser_poster.png" alt="Image 1">
+                <img class="carousel__img" src="assets/planning_images/day_2/crenel_4/insidous_poster.png" alt="Image 2">
+                <img class="carousel__img" src="assets/planning_images/day_2/crenel_4/scream_poster.png" alt="Image 3">
+            </div>
+            <button class="button__prev">❮</button>
+            <button class="button__next">❯</button>
         </div>
         <p class="body__title">
             Jour 3
@@ -122,34 +157,91 @@
             11h - 13h30
         </p>
         <div class="body__carousel">
-            <img src="assets/planning_images/day_3/crenel_1/dont_breathe_poster.png" alt="Image 1">
-            <img src="assets/planning_images/day_3/crenel_1/suspiria_poster.png" alt="Image 2">
-            <img src="assets/planning_images/day_3/crenel_1/the_grudge_poster.png" alt="Image 3">
-            <img src="assets/planning_images/day_3/crenel_1/the_orphanage.png" alt="Image 4">
+            <div class="carousel">
+                <img class="carousel__img" src="assets/planning_images/day_3/crenel_1/dont_breathe_poster.png" alt="Image 1">
+                <img class="carousel__img" src="assets/planning_images/day_3/crenel_1/suspiria_poster.png" alt="Image 2">
+                <img class="carousel__img" src="assets/planning_images/day_3/crenel_1/the_grudge_poster.png" alt="Image 3">
+                <img class="carousel__img" src="assets/planning_images/day_3/crenel_1/the_orphanage.png" alt="Image 4">
+            </div>
+            <button class="button__prev">❮</button>
+            <button class="button__next">❯</button>
         </div>
         <p class="body__semi__title">
             15h - 17h30
         </p>
         <div class="body__carousel">
-            <img src="assets/planning_images/day_3/crenel_2/get_out_poster.png" alt="Image 1">
-            <img src="assets/planning_images/day_3/crenel_2/sinister_poster.png" alt="Image 2">
-            <img src="assets/planning_images/day_3/crenel_2/the_badabook_poster.png" alt="Image 3">
-            <img src="assets/planning_images/day_3/crenel_2/the_nun_poster.png" alt="Image 4">
+            <div class="carousel">
+                <img class="carousel__img" src="assets/planning_images/day_3/crenel_2/get_out_poster.png" alt="Image 1">
+                <img class="carousel__img" src="assets/planning_images/day_3/crenel_2/sinister_poster.png" alt="Image 2">
+                <img class="carousel__img" src="assets/planning_images/day_3/crenel_2/the_badabook_poster.png" alt="Image 3">
+                <img class="carousel__img" src="assets/planning_images/day_3/crenel_2/the_nun_poster.png" alt="Image 4">
+            </div>
+            <button class="button__prev">❮</button>
+            <button class="button__next">❯</button>
         </div>
         <p class="body__semi__title">
             19h - 21h30
         </p>
         <div class="body__carousel">
-            <img src="assets/planning_images/day_3/crenel_3/terrifier_poster.png" alt="Image 1">
-            <img src="assets/planning_images/day_3/crenel_3/the_human_centipede_poster.png" alt="Image 2">
-            <img src="assets/planning_images/day_3/crenel_3/the_thing_poster.png" alt="Image 3">
+            <div class="carousel">
+                <img class="carousel__img" src="assets/planning_images/day_3/crenel_3/terrifier_poster.png" alt="Image 1">
+                <img class="carousel__img" src="assets/planning_images/day_3/crenel_3/the_human_centipede_poster.png" alt="Image 2">
+                <img class="carousel__img" src="assets/planning_images/day_3/crenel_3/the_thing_poster.png" alt="Image 3">
+            </div>
+            <button class="button__prev">❮</button>
+            <button class="button__next">❯</button>
         </div>
         <p class="body__semi__title">
             22h - 00h30
         </p>
         <div class="body__carousel">
-            <img src="assets/planning_images/day_3/crenel_4/carrie_poster.png" alt="Image 1">
-            <img src="assets/planning_images/day_3/crenel_4/saw_poster.png" alt="Image 2">
-            <img src="assets/planning_images/day_3/crenel_4/twenty_eight_days_later_poster.png" alt="Image 3">
+            <div class="carousel">
+                <img class="carousel__img" src="assets/planning_images/day_3/crenel_4/carrie_poster.png" alt="Image 1">
+                <img class="carousel__img" src="assets/planning_images/day_3/crenel_4/saw_poster.png" alt="Image 2">
+                <img class="carousel__img" src="assets/planning_images/day_3/crenel_4/twenty_eight_days_later_poster.png" alt="Image 3">
+            </div>
+            <button class="button__prev">❮</button>
+            <button class="button__next">❯</button>
         </div>
+    </body>
+    <footer class="footer__class">
+        <div class="footer__content">
+            <img class="footer__logo" src="assets/icons/footer_icons/big_logo_without_text.png">
+            <span class="footer__festivhalloween__title">Festiv'Halloween</span>
+            <div class="footer__section">
+                <p class="footer__semi__title">
+                    Menu :
+                </p>
+                <p class="footer__list">
+                    Accueil <br>
+                    Contacts <br>
+                    Programmation <br>
+                    Billetterie <br>
+                    Filmographie <br>
+                    à propos
+                </p>
+            </div>
+            <div class="footer__section">
+                <p class="footer__semi__title">
+                    Contact :
+                </p>
+                <p class="footer__list">
+                    03 81 94 53 89 <br>
+                    8 Rue Henri Mouhot <br>
+                    25200 Montbéliard
+                </p>
+            </div>
+            <div class="footer__section">
+                <p class="footer__semi__title">
+                    Nous suivre :
+                </p>
+                <div class="footer__icon__section">
+                    <img class="footer__icon" src="assets/icons/footer_icons/icon_instagram.png">
+                    <img class="footer__icon" src="assets/icons/footer_icons/icon_tiktok.png">
+                    <img class="footer__icon" src="assets/icons/footer_icons/icon_facebook.png">
+                </div>
+            </div>
+            <img class="footer__mmi__logo" src="assets/logo/logo_mmi.png">
+        </div>
+    </footer>
 </html>
